--- a/web/app/themes/tennis-majors-v2/resources/styles/common/user.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/user.scss
@@ -10,4 +10,16 @@
             @apply w-full max-w-85vw sm:max-w-majoruserpage;
         }
     }
+
+    #major-team-slider {
+        .user {
+            &--major {
+                @apply mx-2;
+            
+                &:first-child {
+                    @apply ml-0
+                }
+            }
+        }
+    }
 }
